Compiler/src/main/java/Testing/Tests/LexicalTests/Fail/InvalidSymbol.ru
/? Simbolo que no pertenece al alfabeto
/? Error, simbolo invalido

¬¬
